feat: stylish and new home page, scroll event to InfiniteCarousel component, fix some responsivness

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 body {
-  overflow: hidden;
+  height: 100%;
+  overflow: auto;
 }
 /* Hide scrollbar on mobile for cleaner look */
 @media (max-width: 640px) {
